# plenodium

./: .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
nerfstudio-v1.5/nerfstudio/configs/: experiment_config.py
nerfstudio-v1.5/nerfstudio/data/datamanagers/: full_images_datamanager.py
nerfstudio-v1.5/nerfstudio/data/dataparsers/: colmap_dataparser.py
nerfstudio-v1.5/nerfstudio/data/datasets/: base_dataset.py  depth_dataset.py
nerfstudio-v1.5/nerfstudio/data/utils/: dataparsers_utils.py
nerfstudio-v1.5/nerfstudio/engine/: trainer.py
nerfstudio-v1.5/nerfstudio/pipelines/: base_pipeline.py
nerfstudio-v1.5/nerfstudio/scripts/: eval.py  render.py
nerfstudio-v1.5/nerfstudio/utils/: eval_utils.py
plenodium/: __init__.py  _torch_impl.py  plenodium.py  plenodium_config.py  project_gaussians.py  rasterize.py  semantic_water_datapaser.py  sh.py  utils.py
plenodium/cuda/: __init__.py  _backend.py
plenodium/cuda/csrc/: CMakeLists.txt  backward.cu  backward.cuh  bindings.cu  bindings.h  ext.cpp  forward.cu  forward.cuh  sh.cuh
